src/styles/_palette.scss
$background-color: #051C27;
$header-color: #062431;
$box-color: #0A2C3C;
$outline-color: #174256;
$highlight-color: #091921;

$inactive-icon-color: #7F8FA4;
$active-icon-color: #F1F6F7;

$text-color: #F1F6F7;
$inactive-text-color: #37647D;
$hover-text-color: #6991AA;
$hyperlink-text-color: #1D96B2;

$primary-button-color: #37647D;
$success-button-color: #3ABA5E;
$danger-button-color: #FF405E;
$warning-button-color: #FAAC19;
$info-button-color: #1E9BC6;

$shadow-color: rgba(0, 0, 0, 0.15);
$pill-background-color: #7F8FA4;

$brand-highlight-color: #FF405E;

$scrollbar-foreground-color: #959FA9;
$scrollbar-background-color: #09181E;

